[project]
name = "openai-realtime-streamlit"
version = "0.1.0"
description = "A Streamlit app demonstrating OpenAI's Realtime API integration"
authors = [
    { name = "Matan Peretz", email = "matanperetz314@gmail.com" }
]
dependencies = [
    "streamlit>=1.31.0",
    "av>=10.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
